--- a/css/estilos.css
+++ b/css/estilos.css
@@ -367,108 +367,79 @@ hr {
 }
 
 /*---------------cargar API---------------------------*/
-.section-trends {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 
-    h3 {
-        margin-top: 2rem;
-        font-size: 2.5rem;
-        font-weight: 700;
-        margin-bottom: 40px;
+.movies-container {
+    width: 90%;
+    margin: 0 auto 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    -ms-grid-columns: repeat(2, 1fr);
+
+    gap: 30px;
+}
+.titulo-pelis {
+    margin-top: 2rem;
+    font-size: 2.5rem;
+    font-weight: 700;
+    margin-bottom: 40px;
+    text-align: center;
+    margin-bottom: 40px;
+    color: #9f3647;
+}
+
+.movies-container .pelicula {
+    text-align: center;
+}
+
+.movies-container .pelicula .titulo {
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.movies-container .pelicula .poster {
+    width: 100%;
+    margin-bottom: 10px;
+    border-radius: 15px;
+}
+
+.btn-container {
+    text-align: center;
+
+    .btn-anterior,
+    .btn-siguiente {
+        background-color: #9f3647;
+        display: inline-block;
+        padding: 0.5rem;
+        border-radius: 5px;
+        font-size: 1rem;
+        font-weight: 500;
+        border: 1px solid #fff;
         text-align: center;
-        margin-bottom: 40px;
-        color: #fff;
-    }
+        transition: transform 0.3s, box-shadow 0.3s;
+        margin-bottom: 100px;
+        margin-top: 50px;
+        margin-left: 20px;
 
-    .movies-container {
-        width: 80%;
-        margin: 0 auto;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 60px;
-
-        .movies {
-            width: 12.5rem;
-            height: 18.75rem;
-            position: relative;
-            border-radius: 10px;
-            box-sizing: border-box;
-
-            .movie {
-                width: 100%;
-                height: 100%;
-                border-radius: 10px;
-                overflow: hidden;
-                transition: all 0.5s ease;
-
-                img {
-                    width: 100%;
-                    height: 100%;
-                    border-radius: 10px;
-                    position: absolute;
-                }
-
-                .movie-titulo {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    height: 100%;
-                }
-
-                h3 {
-                    font-size: 1.6rem;
-                    font-weight: bold;
-                    letter-spacing: 0.1rem;
-                    transition: opacity 0.9s ease-in-out;
-                    opacity: 0;
-                    z-index: 10;
-                    padding: 0 1rem;
-                }
-
-                &:hover {
-                    box-shadow: 0 0 30px #9f3648cd;
-                    transform: scale(0.9);
-                }
-
-                &:hover .movie-titulo {
-                    backdrop-filter: blur(20px);
-                }
-
-                &:hover h3 {
-                    opacity: 1;
-                }
-
-                &:hover img {}
-            }
+        &:hover {
+            transform: scale(0.95);
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+            cursor: pointer;
         }
     }
 }
 
-.btn-anterior,
-.btn-siguiente {
-    background-color: #9f3647;
-    display: inline-block;
-    padding: 0.5rem;
-    border-radius: 5px;
-    font-size: 1rem;
-    font-weight: 500;
-    border: 1px solid #fff;
-    text-align: center;
-    transition: transform 0.3s, box-shadow 0.3s;
-    margin-bottom: 100px;
-    margin-top: 50px;
-    margin-left: 20px;
-
-    &:hover {
-        transform: scale(0.95);
-        box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
-        cursor: pointer;
-    }
+.titulos {
+    font-size: 18px;
+    font-weight: 800;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
+
+.descripcion {
+    text-align: left;
+}
+
+
 
 
 
